--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>test VS code</title>
 </head>
 <body>
-    <div class="wrapper">Lorem ipsum dolor sit amet.</div>
+    <div class="wrapper">
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
+    </div>
+
 </body>
 </html>
